nuevo carrusel, nuevo orden de la carta

--- a/ToDO
+++ b/ToDO
@@ -3,3 +3,8 @@
 -texto
 -arreglar las cosas que estne volando
 -contacto->email
+
+
+- numero de carrusel
+- color de fondo del titulo de los carruseles
+- centrar: flechas
